@startuml

title __JEU's Class Diagram__\n

  namespace jeu {
    class jeu.Joueur {
        {static} + NBR_DE_CARTES_MAX_MAIN : int
        - fauteJoueur : boolean
        - pseudo : String
        + Joueur()
        + cartesRestantes()
        + getFauteJoueur()
        + getMainDuJoueur()
        + getPileAsc()
        + getPileDesc()
        + getPioche()
        + getPseudo()
        + peutJouer()
        + peutPiocher()
        + piocheCartes()
        + poseUneCarte()
        + setFauteJoueur()
        + toString()
        + toStringMainCourante()
        - creationMain()
    }
  }
  

  namespace jeu {
    class jeu.MainJ {
        - listeCarte : ArrayList<Integer>
        + Main()
        + getListeCarte()
        + nbrCartes()
        + poseCarte()
        + recupCarte()
        + toString()
        + trierMain()
        + verifSiCartePresente()
    }
  }
  

  namespace jeu {
    class jeu.Pile {
        - signePile : char
        - sommetDeLaPile : int
        + Pile()
        + getSommetDeLaPile()
        + setSommetDeLaPile()
        + toString()
    }
  }
  

  namespace jeu {
    class jeu.Pioche {
        {static} + NBR_DE_CARTES_DEPART_PIOCHE : int
        - listeCarteDansPioche : ArrayList<Integer>
        + Pioche()
        + getListeCarteDansPioche()
        + prendUneCarte()
        - creationPioche()
    }
  }
  

  namespace jeu {
    class jeu.Plateau {
        - compteurDeCartesPiochees : int
        - compteurDeCartesPosees : int
        - joueChezLadverse : boolean
        + Plateau()
        + gagnerPartie()
        + jouer()
        - afficherTour()
        {static} - convertirEnEntier()
        - dernierTour()
        - jouerPileAscendante()
        - jouerPileAscendanteEnnemi()
        - jouerPileDescendante()
        - jouerPileDescendanteEnnemi()
        - joueurJoueDesCartes()
        - perdrePartie()
        - piocheSesCartes()
    }
  }
  

  jeu.Joueur o-- jeu.MainJ : mainDuJoueur
  jeu.Joueur o-- jeu.Pile : pileAsc
  jeu.Joueur o-- jeu.Pile : pileDesc
  jeu.Joueur o-- jeu.Pioche : pioche
  jeu.Plateau o-- jeu.Joueur : j1
  jeu.Plateau o-- jeu.Joueur : j2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
